# tensorqtl

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: SESSION_HANDOFF.md  calibration_findings.md  fastphase_setup.md  knockoff_susie_design.md  outputs.md
tensorqtl/: genotypeio.py  hapmixqtl.py  knockoffs.py  nbqtl.py  susie.py  tensorqtl.py
tests/: README.md  __init__.py  calibration_validation.py  conftest.py  fastphase_repro.py  hmm_genotype_simulator.py  hprc_calibration.py  knockoff_compute_benchmark.py  overlap_calibration_harness.py  prepare_test_data.py  test_calibration_validation.py  test_cis.py  test_cli.py  test_cli_knockoff_mode.py  test_core.py  test_edge_cases.py  test_genome_wide_fdr.py  test_genotypeio.py  test_hapmix_alpha.py  test_hapmixqtl.py  test_hapmixqtl_knockoffs.py  test_hmm_knockoff_pipeline.py  test_hmm_knockoffs.py  test_hmm_simulator.py  test_integration.py  test_kfc_marginal.py  test_knockoff_calibration_step3.py  test_knockoffs.py  test_knockoffs_calibration.py  test_knockoffs_egenes.py  test_nbqtl.py  test_per_gene_pvalues.py  test_post.py  test_prior_variance_floor.py  test_trans.py  utils.py  validate_nbqtl_cli.py
tests/data/: .gitkeep  README.md  synthetic_covariates.txt  synthetic_genotypes.txt  synthetic_phenotypes.bed  test_covariates.txt
